[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-edrhn"
version = "0.1.1"
description = "Ensemble deep randomized Hopfield network for volatility time-series forecasting."
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Aryan Bhambu"},
    {name = "Selvaraju Natarajan"},
    {name = "Ponnuthurai Nagaratnam Suganthan"},
]
keywords = ["volatility-edrhn", "edrhn", "hopfield", "randomized-neural-network", "volatility", "forecasting", "hyperopt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
            "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
tuning = [
    "hyperopt>=0.2.7",
    "setuptools<81",
]
dev = [
    "build",
    "hyperopt>=0.2.7",
    "pytest",
    "setuptools<81",
    "twine",
]

[project.urls]
Homepage = "https://github.com/statsdl/volatility-edrhn"
Issues = "https://github.com/statsdl/volatility-edrhn/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
